--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ os:
   - linux
 
 julia:
-  - 1.0
-  - 1.5
+  - 1.6
 
 cache:
   directories:
@@ -28,11 +27,11 @@ branches:
   - /^v[0-9]+\.[0-9]+\.[0-9]+$/  # version tags
 
 script:
- - julia --project --color=yes --check-bounds=yes -e 'using Pkg; include("deps/build_private.jl"); if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end; Pkg.test(coverage=true); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+ - julia --project --color=yes --check-bounds=yes -e 'using Pkg; Pkg.build(verbose=true); Pkg.test(coverage=true); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
 jobs:
   include:
     - stage: "Documentation"
-      julia: 1.5
+      julia: 1.6
       os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
